--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ cache:
   apt: true
   directories:
     - $HOME/.cache/pip
+install:
+  - pip install --upgrade pip
+  - pip install --upgrade cython
+  - pip install --upgrade numpy
+  - pip install --upgrade scipy
+  - pip install --upgrade --editable .
+  - pip freeze
 language: python
 notifications:
   email: false
