--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -2,9 +2,9 @@ name: run_tests
 
 on:
   push:
-    branches: [ "master" ]
+    branches: *
   pull_request:
-    branches: [ "master" ]
+    branches: *
 
 jobs:
   build:
