--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -2,9 +2,11 @@ name: run_tests
 
 on:
   push:
-    branches: *
+    branches:
+      - '**'
   pull_request:
-    branches: *
+    branches:
+      - '**'
 
 jobs:
   build:
