--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -25,8 +25,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip setuptools
-        python setup.py install
+        python -m pip install --upgrade pip setuptools wheel
+        python install .
     - name: Test with pytest
       run: |
         python setup.py test
