--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 numpy==1.16.6;python_version < '3.0'
 numpy==1.17.5;python_version > '3.0'
-scipy==1.2.3
+scipy==1.2.3;python_version < '3.0'
+scipy==1.5.3;python_version > '3.0'
 pillow==6.2.2
 matplotlib==2.2.5
 imageio==2.6.1
