--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["2.7", "3.8"]
+        python-version: ["2.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v3
